# ChangeLog for media-sound/kid3
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/kid3/ChangeLog,v 1.56 2011/09/09 19:11:11 thev00d00 Exp $

*kid3-2.0 (09 Sep 2011)

  09 Sep 2011; Ian Whyman <thev00d00@gentoo.org> +kid3-2.0.ebuild:
  Bump to 2.0, Fixes bug #382179

  24 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> kid3-1.6.ebuild:
  Drop kde useflag until somebody really fully test it and support it.

*kid3-1.6 (19 Apr 2011)

  19 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> -kid3-1.5.ebuild,
  +kid3-1.6.ebuild:
  Version bump. Optional switching of some features produces bogus make files.
  This needs to be properly patched before we can even consider stabling it.

*kid3-1.5 (17 Oct 2010)

  17 Oct 2010; Tomáš Chvátal <scarabeus@gentoo.org> +kid3-1.5.ebuild:
  Version bump

  21 Jul 2010; Christian Faulhammer <fauli@gentoo.org> kid3-1.4.ebuild:
  stable x86, bug 325935

  21 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> kid3-1.4.ebuild:
  Fix building with USE="flac -vorbis" wrt #325935 by Thomas Kahle.

  28 Jun 2010; Markos Chandras <hwoarang@gentoo.org> kid3-1.4.ebuild:
  Stable on amd64 wrt bug #325935

  03 May 2010; Alexis Ballier <aballier@gentoo.org> kid3-1.4.ebuild:
  keyword ~x86-fbsd

*kid3-1.4 (06 Mar 2010)

  06 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> +kid3-1.4.ebuild:
  Version bump.

  23 Nov 2009; Dror Levin <spatz@gentoo.org> kid3-1.3.ebuild,
  +files/kid3-1.3-compile-without-vorbis.patch:
  Fix compilation with USE=-vorbis, bug 294160.

*kid3-1.3 (19 Nov 2009)

  19 Nov 2009; Dror Levin <spatz@gentoo.org> +kid3-1.3.ebuild:
  Version bump, bug 292753.

  18 Oct 2009; Markus Meier <maekke@gentoo.org> kid3-1.2-r3.ebuild:
  x86 stable, bug #289293

  16 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> kid3-1.2-r3.ebuild:
  amd64 stable wrt #289293

*kid3-1.2-r3 (21 Aug 2009)

  21 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> +kid3-1.2-r3.ebuild: