@@ -1,8 +1,24 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST kid3-1.4.tar.gz 1539244 RMD160 c73090e90d7c785d33b4e10d6ff5f75d525aeb30 SHA1 4c53ac9f23449c6643bf3d9d7547978c41146922 SHA256 dc3f79617cfe2e3fcc3414542d65424ea22864b289d93f3552853c2ba14df418
 DIST kid3-1.6.tar.gz 1478393 RMD160 7ad7aaf58957be112cea2b2b4962b81fdbb6b6e9 SHA1 64701fa5ee575c6f66e4d0fb70fdaf6c16e54a82 SHA256 974208d5545a9a2bb192dc1a3cfaa64f2269d4f7001d150255ce3f3a3f6723c2
+DIST kid3-2.0.1.tar.gz 805506 RMD160 cfbd8e1103f6211c3ca74e84135c9f1ad055e271 SHA1 951864e665b3b40c7020dcce38de6186cf4a7e12 SHA256 32c3bdf5a3f170076e46c5f3b9523f688e8ea6265d22d2264c1bcd318da9f32e
 DIST kid3-2.0.tar.gz 804587 RMD160 746f585575e700e95df6fd3a48b664db9e654de6 SHA1 4e3ec0a98fbba20325fb93d2dcafb86595652c30 SHA256 bdf4ff4f929d7ad6d5b0a6b2661e76ac83216ae94d84a7886f68011c3b7110cd
 EBUILD kid3-1.4.ebuild 1147 RMD160 f9ca57bfb5f9c1781a60853013fe658e5215a0d5 SHA1 b58a2dfc45ad2101f3ca60925598b59fa75c6245 SHA256 f47d1a1dc926b42926253fc386f93f245c0e3639db9d48114f3f778c0128c637
 EBUILD kid3-1.6.ebuild 1109 RMD160 c35767ba77d3fdf83e0ecac8bbdac8950f111545 SHA1 3427514293bae0a6b57104e93e73d06ab4700ebe SHA256 dc53ae7f18d4c7626aa5c0ca18c1c2672409b190e09631aca881187af427add0
+EBUILD kid3-2.0.1.ebuild 1084 RMD160 dade52647f21274425abbe0d2b19e2f2e0d9e9c8 SHA1 81fc56703020dc310e0917d41bde9366bb93316e SHA256 26b64b52c58fd485554c2c8e79486b836865d54b8b9e290cc4c036086626c5fe
 EBUILD kid3-2.0.ebuild 1087 RMD160 379c3f1462cb433d25a73dab229779a267a0e8f0 SHA1 5516bc33738aabc3b14454652a15f18a8a162412 SHA256 e75f4318b7c991db8d68536718e1e44917c1a12dc8edb4410447154d86f6d2c3
-MISC ChangeLog 7673 RMD160 d43639a59ba1c4202c4c600f4c0d3b3a66f1bb9e SHA1 0ba58397a81ad565e4ec71fedbfced4c87e5d6a8 SHA256 e70c1e86d7b4a9a8465d64dbffb177d21351da1384f95fba62b5d5bf686e399e
+MISC ChangeLog 7796 RMD160 ec63425bec5fd77c35638e3d9ab7ef9b676fb8e9 SHA1 97c4e7d81106fe682190798a40e89ebb77bb804b SHA256 f1298d44765444627919215722c6667ed56cece255691ca1fbd8963212d853fd
 MISC metadata.xml 179 RMD160 224e1883835fc791f44fdef156866625e02ef60d SHA1 607ee34e3564d7e6d8e0ada382cf18c0315ba5fb SHA256 a6cc704b7ee96c5ce8f058d37447ffb4963d319e557b7fd8ff2bc63e5377d030
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iQEcBAEBCgAGBQJPCOGyAAoJEO+t9ga+3I3aJBcH/3wtoWqdmI0giQ2ygnqwzxyg
+D9++w9mp1/gNKPWU+Agia2VXYUGVnQr36vFocMTpNi7HQwaRdtlMzUhGXKNKeq1g
+v3t/1tTdWQf6CKmwzig6JQGEK24Dd1rbfShHoQkz15ch7DFGvt0lM0qGUpNFPY+d
+tQzxvcQXLNcU0EshWCoz90AWsbgotZxlat++MxNpf8BSR4I3jdZ2Tg9cEI10VurN
+5m5AC0akWCx18MMvpF5HghPy+y+W7CtGpLq2vWEF64dEc7LuUuD3kMOCUTcPCQ1F
+PkQ9SYIRj2nwqlPqyb5CcZecFnFe/uij/Qxrjrgy9K/rG6weAdcgWnDdlI8SncI=
+=RAQg
+-----END PGP SIGNATURE-----
