@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/kid3
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/kid3/ChangeLog,v 1.56 2011/09/09 19:11:11 thev00d00 Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/kid3/ChangeLog,v 1.57 2012/01/08 00:19:03 johu Exp $
+
+*kid3-2.0.1 (08 Jan 2012)
+
+  08 Jan 2012; Johannes Huber <johu@gentoo.org> +kid3-2.0.1.ebuild:
+  Version bump wrt bug #398105.
 
 *kid3-2.0 (09 Sep 2011)
 
